[package]
name = "heca"
version = "1.4.2"
authors = ["picked name <ipickedaname@mail.com>"]
edition = '2018'
repository = "https://github.com/heca-project/heca"
description = "Hebrew calendar utility"
categories = ["command-line-utilities", "date-and-time"]
keywords = ["calendar", "hebrew", "jewish"]
license = "MIT"
readme = "README.md"

[dependencies]

chrono = {version = "0.4", features = ["serde"]}
clap = {version = "2.33", features = ["yaml"]}
heca-lib = "1.3"
either = {version = "1.5", features = ["serde"]}
itoa = "0.4"
rayon = "1.2"
xdg = "2.2"
dirs = "2.0"
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
cpuprofiler = "0.0.4"

[profile.release]
lto = true
debug = true
overflow-checks = false
panic="abort"

[features]
profile = []

[dev-dependencies]
assert_cmd = "0.12"
predicates = "1"
once_cell = "1.2"
regex = "1"


