[package]
name = "heca-lib"
version = "0.2.1"
authors = ["picked name <ipickedaname@mail.com>"]
edition = "2018"
description = "Hebrew Calendar library."
keywords = ["library", "calendar", "hebrew", "jewish"]
categories = ["date-and-time"]
license = "MIT"
repository = "https://github.com/heca-project/heca"
readme = "README.md"

[badges]
travis-ci = { repository = "heca-project/heca", branch = "master" }
maintenance = { status ="actively-developed"}
is-it-maintained-issue-resolution = {repository = "heca-project/heca"}
is-it-maintained-open-issues = { repository = "heca-project/heca"}




[dependencies]
lazy_static = "1.2.0"
chrono = "0.4"
time = "0.1.42"
enum_primitive = "0.1.1"
num = "0.2.0"
smallvec = "0.6.8"
serde =  { version = "1.0", features = ["derive"] }

[dev-dependencies]
rayon = "1.0"
atoi = "0.3.1"
criterion = "0.2"


[profile.release]
debug = true
lto = true
